# bungie-rs

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md
examples/: .env.sample  get_destiny_manifest.rs  main.rs  print_destiny_version.rs  search_destiny_player.rs
src/: destiny2.rs  lib.rs  macros.rs  models.rs
src/destiny2/: mod.rs  models.rs
