[package]
authors = ["Maarten Vos <maarten@mrtn.run>"]
categories = ["api-bindings"]
description = "A Rust crate for interacting with the Bungie.net API"
keywords = ["bungie", "destiny2"]
license = "MIT"
name = "bungie"
readme = "README.md"
repository = "https://github.com/inferiormartin/bungie-rs"
version = "0.2.0"

[badges]
travis-ci = { repository = "inferiormartin/bungie-rs", branch = "master" }

[dependencies]
failure = "0.1.1"
hyper = "0.11.22"
reqwest = "0.8.6"
serde = "1.0.68"
serde_derive = "1.0.68"
serde_json = "1.0.22"

[dev-dependencies]
dotenv = "0.13.0"